# susurrus

./: .env.example  .gitignore  CLAUDE.md  PROFILES.md  README.md  audio_reader.py  capture.sh  config.py  display.py  document.py  llm_reformatter.py  prompt_loader.py  pyproject.toml  reformatter_log.py  server.py  transcribe.py  vad_engine.py  whisper_worker.py
profiles/: _base.py  banking.py  default.py  demo-meeting.py  podcast.py
prompts/: banking_call.md  continuation.md  continuation_system.md  demo_meeting_advisor.md  demo_meeting_backstory.md  demo_meeting_terms.md  political_podcast.md  term_extractor_format.md  term_lookup.md
setup/: icecast.xml
static/: index.html
steps/: advisor.py  base.py  continuation.py  monitor.py  qa.py  reformatter.py  term_lookup.py
tests/: conftest.py  test_document.py
