[project]
name = "susurrus"
version = "0.1.0"
description = "Real-time audio transcription + LLM co-pilot for live calls"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "silero-vad>=5.1",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "anthropic>=0.50.0",
    "nltk>=3.8",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
